--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "stripe": "^17.6.0",
     "svix": "^1.42.0"
